# twilic-js

./: .gitignore  Cargo.toml  README.md  package.json
.github/: twilic-rust-ref
.github/workflows/: ci.yml  commitlint.yml  invisible-chars.yml  pr-bench-bundle.yml  pr-message-check.yml  publish-npm.yml  semgrep.yml
crates/recurram-napi/: Cargo.toml
crates/recurram-napi/src/: lib.rs
crates/twilic-bridge/: Cargo.toml
crates/twilic-bridge/src/: lib.rs
crates/twilic-napi/: Cargo.toml
crates/twilic-napi/src/: lib.rs
crates/twilic-wasm/: Cargo.toml
crates/twilic-wasm/src/: lib.rs
docs/: CHANGELOG.md  CONTRIBUTING.md
scripts/: build-pr-report.mjs  copy-napi.mjs  measure-bundle.mjs  verify-pack-contents.mjs
src/: advanced.ts  backend.ts  errors.ts  fast-codec.ts  index.ts  safe-map-key.ts  transport.ts  types.ts
src/runtime/: node-adapter.ts  node-backend.ts  types.ts  wasm-backend.ts
tests/: api.test.mjs  wasm.test.mjs
