[package]
name = "recurram-napi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
recurram-bridge = { path = "../recurram-bridge" }
recurram-core = { package = "recurram", path = "../../../recurram-rust" }
napi = { version = "2.16", default-features = false, features = [
  "napi8",
  "serde-json",
] }
napi-derive = "2.16"
serde_json = "1.0"

[build-dependencies]
napi-build = "2.1"
