[package]
name = "twilic-napi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
twilic-bridge = { path = "../twilic-bridge" }
twilic-core = { package = "twilic", path = "../../../twilic-rust" }
napi = { version = "2.16", default-features = false, features = [
  "napi8",
  "serde-json",
] }
napi-derive = "2.16"
serde_json = "1.0"

[build-dependencies]
napi-build = "2.1"
